<resources>
    <string name="app_name">CampHub Online</string>
    <string name="login">Log In</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://nyltcamphub.azurewebsites.net\",\n  }\n}]</string>
    <string name="about">About CampHub Online</string>
    <string name="test_string">Day Final \u00B7 SPL</string>
    <string name="eval_header">Day %s1 \u00B7 %s2</string>
    <string name="scout_subheader">%s1 \u00B7 </string>
    <string name="separator">\u00B7</string>
    <string name="eval_recommend">recommendation: %s1</string>
    <string name="tap_comments">tap for comments</string>
    <string name="hold_edit">hold to edit</string>
    <string name="refresh">Refresh</string>
    <string name="knowledge">knowledge</string>
    <string name="skill">skill</string>
    <string name="confidence">confidence</string>
    <string name="motivation">motivation</string>
    <string name="enthusiasm">enthusiasm</string>
    <string name="knowledgeCaps">Knowledge</string>
    <string name="skillCaps">Skill</string>
    <string name="confidenceCaps">Confidence</string>
    <string name="motivationCaps">Motivation</string>
    <string name="enthusiasmCaps">Enthusiasm</string>
    <string name="commentsCaps">Comments</string>
    <string name="dayCaps">Day</string>
    <string name="recommendCaps">Recommend for Staff</string>
    <string name="eval_comments_header">Comments by %s1</string>
    <string name="eval_comments_header_preload">Comments</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="scoutid">Scout ID</string>
    <string name="bsaid">BSA ID</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="position">Position</string>
    <string name="team">Team</string>
    <string name="isadmin">Is Admin</string>
    <string name="isyouth">Is Youth</string>
    <string name="isstaff">Is Staff</string>
    <string name="iselevated">Is Senior Staff</string>
    <string name="coursename">Course Name</string>
    <string name="lastmodified">Last Modified</string>
    <string name="lastmodified_formatted">Last Modified %s1</string>
    <string name="created">Created</string>
    <string name="created_formatted">Created %s1</string>
    <string name="server">Server</string>
    <string name="courseid">Course ID</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="maybe">Maybe</string>
    <string name="no">No</string>
    <string name="custom_server">Custom Server</string>
    <string name="finalCaps">Final</string>
</resources>
